<?xml version="1.0" encoding="utf-8"?>
<!--
TODO: Add button functionality, exit button, hr line, reminder functionality?

  ~    Copyright 2018 Sage Bionetworks
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/crf_decline_text_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="visible"
        android:background="#C94281">

        <TextView
            style="@style/TextAppearance.Crf.IntroBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/crf_not_rest_hr"
            android:textSize="24sp"
            android:textColor="@color/white80"
            android:gravity="center_horizontal"/>
        <TextView
            style="@style/TextAppearance.Crf.IntroBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/crf_relax_rest"
            android:textColor="@color/white80"
            android:padding="@dimen/rsb_padding_medium"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <View
        android:id="@+id/rectangle"
        android:layout_width="375dp"
        android:layout_height="144dp"
        android:layout_below="@id/crf_decline_text_container"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="512dp">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:background="#3C4A63"
            android:text="@string/crf_decline_continue"
            />

        <TextView
            style="@style/TextAppearance.Crf.IntroBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/crf_remind_me_later"
            android:textColor="@color/white80"
            android:padding="@dimen/rsb_padding_medium"
            android:gravity="center_horizontal"/>


    </View>


</RelativeLayout>