<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2017 Sage Bionetworks
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="org.sagebase.crf.CrfOverviewActivity"
    android:background="@color/deepGreen">

    <TextView
        style="@style/TextAppearance.Crf.IntroHeader"
        android:id="@+id/crf_overview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/crf_overview_title"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/crf_overview_image_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/rsb_step_layout_image_height"
        android:layout_below="@id/crf_overview_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/rsb_padding_medium"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:src="@drawable/crf_intro_icon"/>

    <TextView
        style="@style/TextAppearance.Crf.IntroSubHeader"
        android:id="@+id/crf_overview_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/crf_overview_image_view"
        android:textColorLink="?attr/colorAccent"
        android:text="@string/crf_overview_text"
        android:textColor="@color/white"/>

    <TextView
        style="@style/TextAppearance.Crf.IntroBody"
        android:id="@+id/crf_overview_detail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/crf_overview_text"
        android:layout_above="@+id/button_go_forward"
        android:textColorLink="?attr/colorAccent"
        android:text="@string/crf_overview_detail_text"
        android:textColor="@color/white"/>

    <Button
        style="@style/Crf.WhiteDeepGreen.RoundedCornerMaterialButton"
        android:id="@id/button_go_forward"
        android:layout_width="match_parent"
        android:layout_height="@dimen/crf_rounded_button_height"
        android:layout_margin="@dimen/rsb_padding_large"
        android:text="@string/crf_lets_go"
        android:layout_alignParentBottom="true"
        android:onClick="goForwardClicked"/>

</RelativeLayout>
