<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2017 Sage Bionetworks
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/crf_root_instruction_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/TextAppearance.Crf.SubHeader"
        android:id="@+id/crf_heart_rate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="?attr/actionBarSize"
        android:gravity="center_horizontal"
        android:textColor="@color/black54"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="@dimen/rsb_padding_large"
        android:layout_marginRight="@dimen/rsb_padding_large"
        android:layout_marginBottom="@dimen/rsb_padding_large" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/crf_redo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/crf_heart_rate_title"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/crf_redo_measurement"
        android:visibility="gone"
        />

    <FrameLayout
        android:id="@+id/crf_heart_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/crf_redo_button"
        android:layout_centerHorizontal="true">

        <FrameLayout
            android:layout_width="@dimen/crf_video_preview"
            android:layout_height="@dimen/crf_video_preview">
            <TextureView
                android:id="@+id/crf_camera_texture_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <org.sagebase.crf.step.OverlayWithHole
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </FrameLayout>

        <org.sagebase.crf.camera.CameraSourcePreview
            android:id="@+id/crf_camera_source"
            android:layout_width="300dp"
            android:layout_height="300dp" />

        <!-- This View's width and height must be set dynamically based on the camera preview size -->
        <FrameLayout
            android:id="@+id/crf_arc_drawable_container"
            android:layout_width="@dimen/crf_video_preview"
            android:layout_height="@dimen/crf_video_preview"
            android:layout_gravity="center"
            android:visibility="gone"
            android:background="@color/white">

            <View
                android:id="@+id/crf_arc_drawable"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/crf_bpm_text_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:visibility="gone">

            <TextView
                style="@style/TextAppearance.Crf.IntroBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/crf_your_heart_rate_is"
                android:textColor="@color/black86"
                android:padding="@dimen/rsb_padding_medium"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.Crf.BpmNumber"
                    android:id="@+id/crf_heart_rate_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/salmon"/>

                <TextView
                    style="@style/TextAppearance.Crf.ActiveStatusText"
                    android:id="@+id/crf_heart_rate_bpm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf_bpm"
                    android:layout_gravity="center"
                    android:textColor="@color/black86"
                    android:padding="@dimen/rsb_padding_large"/>

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/crf_heart_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/crf_heart_icon"
            android:visibility="gone"/>

        <TextView
            style="@style/TextAppearance.Crf.ActiveStatusText"
            android:id="@+id/crf_heart_rate_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crf_camera_cover"
            android:textColor="@color/black37"
            android:padding="@dimen/rsb_padding_large"
            android:visibility="gone"/>

        <TextView
            style="@style/TextAppearance.Crf.ActiveStatusText"
            android:id="@+id/crf_pressure_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crf_cant_read"
            android:textColor="@color/black37"
            android:padding="@dimen/rsb_padding_large"
            android:visibility="gone"/>

    </FrameLayout>
    <TextView
        android:id="@+id/crf_current_bpm"
        style="@style/TextAppearance.Crf.IntroBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/crf_heart_container"
        android:layout_centerHorizontal="true"
        android:text="--"
        android:textColor="@color/black86"
        android:padding="@dimen/rsb_padding_medium"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/rsb_padding_large"
        android:clipChildren="false">

        <Button
            style="@style/Widget.Crf.SubmitBar"
            android:id="@+id/crf_next_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/crf_rounded_button_height"
            android:layout_gravity="center"
            android:text="@string/rsb_BUTTON_NEXT"
            android:textAllCaps="false"
            android:visibility="gone"/>

    </FrameLayout>

</RelativeLayout>
